--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="container">
               <ul class="nav">
                 <li><a href="https://boards.4channel.org/biz/catalog" target="_blank">Shill</a></li>
-                <li><a href="https://t.me/x86DeFi" target="_blank">Chat</a></li>
+                <li><a href="https://t.me/XESnetwork" target="_blank">Chat</a></li>
                 <li><a href="https://etherscan.io" target="_blank">Contract</a></li>
                 <li><a href="https://memepool.app" target="_blank">memepool</a></li>
               </ul>
