--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           </div>
         </div><!-- /.navbar -->
       </div>
-<center><img src="XES.png" width="200" height="80"></center>
+<center><img src="xes.png" width="200" height="80"></center>
 <br>
  <div class="container">
       <!-- Main hero unit for call to action -->
